--- a/src/styles/components/_text.scss
+++ b/src/styles/components/_text.scss
@@ -6,6 +6,5 @@
 	line-height: 150%;
 	text-align: justify;
 
-	min-width: 35rem;
 	max-width: 90ch;
 }
