--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -16,6 +16,7 @@
 	&__list {
 		display: flex;
 		flex-wrap: wrap;
+		gap: 1rem;
 		height: inherit;
 		align-items: center;
 		justify-content: space-around;
