--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,6 +2,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	right: 0;
 	width: 100vw;
 	height: 7rem;
 	z-index: 10;
